--- a/SPA2023/Frontend/truwebque/src/app/pages/contacto-component/contacto-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/contacto-component/contacto-component.component.html
@@ -10,7 +10,7 @@
             Bienvenido!
           </p>
         </div>
-        <button [routerLink]="['/']">ir a Inicio <i class="bi bi-box-arrow-right"></i></button>
+        <button [routerLink]="['/']">ir a Inicio <i class="bi bi-house"></i></button>
     </div>
 
 </div>
