--- a/SPA2023/Frontend/truwebque/src/app/shop/component/all-products/all-products.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/all-products/all-products.component.html
@@ -1,5 +1,5 @@
 <div class="container text-center">
-  todos productos
+  <h2>Productos</h2>
 
   <!-- carousel init
   <div class="container" style=" height: 20rem">
