--- a/SPA2023/Frontend/truwebque/src/app/shop/component/my-products/my-products.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/my-products/my-products.component.html
@@ -1,7 +1,9 @@
+
+<div id="main-productos">
 <div class="row">
   <div class="col-sm-8 col-xs-12 justify-content-xs-center"><h1>Mis publicaciones</h1></div>
   <div class="col-sm-4 col-xs-12 d-flex justify-content-sm-end justify-content-xs-center">
-    <button class="btn btn-primary btn-1" [routerLink]="['/shop/newProduct']">Agregar publicacion
+    <button class="btn btn-warning btn-1" [routerLink]="['/shop/newProduct']">Agregar publicacion
     </button></div>
 </div>
 
@@ -60,4 +62,5 @@
     class="fixed-bottom alert alert-danger dismiss"
      role="alert">
   La publicacion fue eliminada.
+</div>
 </div>
