--- a/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.css
+++ b/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.css
@@ -2,8 +2,10 @@
 
 form{
     margin-top: 200px;
-    margin-bottom: 200px;
+    margin-bottom: 200px;    
 }
+
+
 
 input:focus {outline: unset;}
   /* agregar borde rojo a los input que estén en estado inválido */
@@ -18,7 +20,7 @@ input:invalid + label {
     border-top-left-radius: 0;
     padding-left: 5px;
     padding-right: 5px;
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(170, 4, 4);
     font-size: smaller;
   }
 
@@ -37,7 +39,7 @@ input:invalid + label {
 }
 #linea div{margin-right: 1%;}
 
-#form-btn{
+/* #form-btn{
     margin-top: 6px;
     background-color: rgb(226, 141, 43);
     border-radius: 8px;
@@ -53,8 +55,31 @@ button:hover{
   box-shadow: 0 0 5px #545352, 0 0 10px #745e2fca,
     0 0 15px #302c25;
 
+} */
+
+#form-btn{
+  padding: 10px 20px;
+    color: #fdb211;
+    font-size: 16px;
+    letter-spacing: 4px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    background-color: #434249;
+    
+    border: 1px solid #222222;
+    border-radius: 5px;
+    margin: auto;
 }
 
+button:hover{
+  background-color: rgb(42, 41, 43);
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #646360, 0 0 15px #997a37,
+  0 0 40px #302c25;
+}
 #fecha{
     border-radius: 4px;
     margin-left: 5px;
