--- a/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.css
+++ b/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.css
@@ -1,6 +1,6 @@
 footer{
   background-color: black;
-  color: #c41a1a;
+  color: #e4d4d4;
 }
 
 footer a{
@@ -18,4 +18,6 @@ footer a{
 
 section ul li a i{
   filter: invert(100%);
-}
+} 
+
+
