--- a/SPA2023/Frontend/truwebque/src/app/shop/component/new-product/new-product.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/new-product/new-product.component.html
@@ -1,2 +1,2 @@
-<h1 class="text-center">Carga nueva publicacion</h1>
+<h2 class="text-center">Carga una publicacion!</h2>
 <app-product-form ></app-product-form>
