--- a/SPA2023/Frontend/truwebque/src/app/shop/component/product-form/product-form.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/product-form/product-form.component.html
@@ -1,31 +1,20 @@
 <div class="container pr-5 size">
   <div class="container px-3 py-2 bordes">
+
     <form [formGroup]="form">
+
+
       <div class="form-check mt-3">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          value=""
-          id="IsNewCheck"
-          formControlName="IsNewCheck"
-        />
+        <input class="form-check-input" type="checkbox" value="" id="IsNewCheck"formControlName="IsNewCheck"/>
         <label class="form-check-label" for="IsNewCheck">Es nuevo?</label>
       </div>
 
       <div class="form-group">
+
         <label for="title">titulo</label>
-        <input
-          type="text"
-          class="form-control"
-          formControlName="title"
-          required
-        />
-        <div
-          class="row"
-          *ngIf="
-            titleControl.invalid && (titleControl.dirty || titleControl.touched)
-          "
-        >
+        <input type="text" class="form-control" formControlName="title" required/>
+
+        <div class="row" *ngIf=" titleControl.invalid && (titleControl.dirty || titleControl.touched)">
           <p class="col error" *ngIf="titleControl.errors?.['minlength']">
             Minimo 4 caracteres
           </p>
@@ -36,16 +25,13 @@
             Campo requerido
           </p>
         </div>
+
       </div>
+
 
       <div class="mb-3">
         <label for="description" class="form-label">Descripcion</label>
-        <textarea
-          class="form-control"
-          id="description"
-          rows="3"
-          formControlName="description"
-        ></textarea>
+        <textarea class="form-control"id="description" rows="3"formControlName="description"></textarea>
       </div>
 
       <div class="mb-3">
@@ -55,30 +41,14 @@
 
       <div class="form-group">
         <label for="precio">precio</label>
-        <input
-          type="number"
-          class="form-control"
-          formControlName="price"
-          placeholder="$0.00"
-        />
+        <input type="number" class="form-control"formControlName="price" placeholder="$0.00"/>
       </div>
 
       <div class="form-group">
         <label for="cantidad">cantidad</label>
-        <input
-          type="number"
-          class="form-control"
-          formControlName="quantity"
-          required
-        />
+        <input type="number" class="form-control" formControlName="quantity" required/>
       </div>
-      <div
-        class="row"
-        *ngIf="
-          quantityControl.invalid &&
-          (quantityControl.dirty || quantityControl.touched)
-        "
-      >
+      <div class="row" *ngIf="quantityControl.invalid &&(quantityControl.dirty || quantityControl.touched)">
         <p class="col error" *ngIf="quantityControl.errors?.['required']">
           Campo requerido
         </p>
@@ -92,16 +62,9 @@
         <label for="preferencias">preferencias</label>
         <input type="text" class="form-control" formControlName="preferences" />
       </div>
-      <div
-        class="row"
-        *ngIf="
-          preferencesControl.invalid &&
-          (preferencesControl.dirty || preferencesControl.touched)
-        "
-      >
-        <p class="col error" *ngIf="preferencesControl.errors?.['required']">
-          Campo requerido
-        </p>
+
+      <div class="row" *ngIf="preferencesControl.invalid &&(preferencesControl.dirty || preferencesControl.touched)">
+        <p class="col error" *ngIf="preferencesControl.errors?.['required']">Campo requerido</p>
       </div>
 
       <div class="form-group">
@@ -112,67 +75,44 @@
       </div>
 
 
-
-
       <div class="form-check mt-3">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          value=""
-          id="readCheck"
-          formControlName="readCheck"
-        />
+        <input class="form-check-input" type="checkbox" value=""id="readCheck" formControlName="readCheck"/>
         <label class="form-check-label" for="readCheck">
           Leí y estoy de acuerdo con las
-          <a class="link-primary" [routerLink]="['/shop/publishTerms']">
-            condiciones de uso
-          </a>
+          <a class="link-primary" [routerLink]="['/shop/publishTerms']">condiciones de uso</a>
           de la plataforma.
         </label>
       </div>
+
       <div class="col" *ngIf="edditing; then thenBlock; else elseBlock"></div>
+
       <ng-template #thenBlock>
-        <button
-          [disabled]="form.invalid || form.pending"
-          type="submit"
-          (click)="editProduct()"
-          class="mt-3 btn btn-primary">
-          Editar
+        <button [disabled]="form.invalid || form.pending"type="submit"(click)="editProduct()"class="mt-3 btn btn-warning">
+         Editar
         </button>
       </ng-template>
+
       <ng-template #elseBlock>
-        <button
-          [disabled]="form.invalid || form.pending"
-          type="submit"
-          (click)="addProduct()"
-          class="mt-3 btn btn-primary">
+        <button [disabled]="form.invalid || form.pending" type="submit" (click)="addProduct()"class="mt-3 btn btn-warning">
           Agregar
         </button>
       </ng-template>
+
     </form>
+
+
   </div>
 </div>
 
 <!-- Delete alert-->
-<div
-  *ngIf="added"
-  class="fixed-bottom alert alert-success dismiss"
-  role="alert"
->
+<div *ngIf="added" class="fixed-bottom alert alert-success dismiss" role="alert">
   La publicacion fue agregada con exito.
 </div>
-<div
-  *ngIf="edited"
-  class="fixed-bottom alert alert-success dismiss"
-  role="alert"
->
+<div *ngIf="edited" class="fixed-bottom alert alert-success dismiss"role="alert">
   La publicacion fue modificada con exito.
 </div>
-<div
-  *ngIf="deleted"
-  class="fixed-bottom alert alert-danger dismiss"
-  role="alert"
->
+
+<div *ngIf="deleted" class="fixed-bottom alert alert-danger dismiss"role="alert">
   Ocurrio un error.
 </div>
 
