--- a/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
@@ -47,13 +47,7 @@
 
             <li class="nav-item">
               <a class="nav-link" [routerLink]="['/shop/myProducts']">
-                <i class="fa-light fa-user"></i>
-                Productos</a>
-
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/shop/myProducts']">Mis Productos</a>
+                <i class="fa-light fa-user"></i>Mis Productos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" [routerLink]="['/']" (click)="LogOut()">Salir <i class="bi bi-box-arrow-right"></i></a>
