--- a/SPA2023/Frontend/truwebque/src/app/shop/component/my-products/my-products.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/my-products/my-products.component.html
@@ -4,13 +4,18 @@
     <button class="btn btn-primary btn-1" [routerLink]="['/shop/newProduct']">Agregar publicacion
     </button></div>
 </div>
+<div *ngIf="isLoading" class="d-flex justify-content-center align-items-center">
+  <div class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
 
 <div class="col my-5 py-5" *ngIf="noProducts" >
   <h1 class="text-center mb-3">No posees publicaciones activas.</h1>
   <h2 class="text-center">Empieza agregando y vende o cambia tus Productos o servicios</h2>
 </div>
 
-<table class="table table-hover" *ngIf="!noProducts">
+<table class="table table-hover" *ngIf="!noProducts && !isLoading">
   <thead>
     <tr>
       <th scope="col">N°</th>
