--- a/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.css
+++ b/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.css
@@ -3,15 +3,26 @@
 form{
     margin-top: 200px;
     margin-bottom: 200px;    
+    background-color: #1d1d1de7;
+}
+
+
+
+
+input{
+  border: none;
+  border-bottom: 1px solid #fdb211;
+  outline: none;
+
 }
 
 
 
 input:focus {outline: unset;}
-  /* agregar borde rojo a los input que estén en estado inválido */
-  .ng-invalid {border: 2px solid rgb(250, 183, 0);}
-  .ng-valid{ border:  3px solid rgba(2, 198, 2, 0.864);}
 
+/* agregar borde rojo a los input que estén en estado inválido */
+/* .ng-invalid {border: 2px solid rgb(250, 183, 0);} */
+.ng-valid{ border:  3px solid rgba(2, 198, 2, 0.864);}
 input + label {display: none;}
   
 input:invalid + label {
@@ -30,7 +41,6 @@ input:invalid + label {
     margin-left: auto;
     margin-right: auto; 
     border-radius: 15px;
-    background-color: #1d1d1de7;
     color: whitesmoke;
 }
 #linea{
@@ -39,23 +49,6 @@ input:invalid + label {
 }
 #linea div{margin-right: 1%;}
 
-/* #form-btn{
-    margin-top: 6px;
-    background-color: rgb(226, 141, 43);
-    border-radius: 8px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-button:hover{
-  transform: scale(1.1);
-  transition: 0.1s;
-  color:black;
-  box-shadow: 0 0 5px #545352, 0 0 10px #745e2fca,
-    0 0 15px #302c25;
-
-} */
 
 #form-btn{
   padding: 10px 20px;
