--- a/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.html
@@ -6,7 +6,7 @@
     <div class="form-row mb-4" id="linea">
        <!-- Campo username -->
       <div class="col-md-6 mb-3">
-        <input type="text" id="defaultRegisterFormFirstName" minlength="3" class="form-control"  placeholder="Usuario" formControlName="username">
+        <input type="text" id="defaultRegisterFormFirstName" minlength="4" class="form-control"  placeholder="Usuario" formControlName="username">
         <label for="defaultRegisterFormFirstName">Ingrese Nombre correctamente</label>
       </div>
        <!--  Campo Password -->
@@ -17,8 +17,8 @@
     </div>
 
      <!--  Campo Email -->
-    <div class="form-row mb-3">
-      <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="Correo" formControlName="email">
+    <div class="col-row mb-3">
+      <input type="email" id="defaultRegisterFormEmail" class="form-control" placeholder="Correo" formControlName="email">
       <label for="defaultRegisterFormEmail">Ingrese Mail correctamente</label>
     </div>
     <!--  boton Registro -->
@@ -26,6 +26,6 @@
     <hr>
     <!-- Terminos y servicios -->
     <p>Al <em >Registrarte</em> estas aceptando nuestros
-    <a [routerLink]="['/tyc']">terminos y condiciones</a>
+    <a [routerLink]="['/tyc']" style="color: orange;">terminos y condiciones</a>
 
 </form>
