se quita console

--- a/SPA2023/Frontend/truwebque/src/app/shop/component/product/product.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/product/product.component.html
@@ -31,7 +31,7 @@
       </div>
       <div class="col-md-8 col-sm-12">
         <img
-          src="https://th.bing.com/th/id/R.dc5e5867cabdb00c44433dac2c87c736?rik=0RpcniOFTFBBcw&riu=http%3a%2f%2fwww.pepsico.cl%2fimages%2flibrariesprovider40%2fdefault-album%2fvb3_montaje-productos-pepsico2e33c3aeef576d378be6ff5000e253d8.jpg%3fsfvrsn%3d1&ehk=DWzgEvkO%2fu8RcjcZYgkjXFxQRKrjMqoYosTD6FAvypE%3d&risl=&pid=ImgRaw&r=0"
+          src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png"
           class="img"
           alt="Imagen de publicacion"
         />
